# ChangeLog for net-www/twiki
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/twiki/Attic/ChangeLog,v 1.3 2004/03/10 20:02:33 mholzer Exp $

  10 Mar 2004; Martin Holzer <mholzer@gentoo.org> twiki-20030201.ebuild:
  fixing verbose. closes 44083

  23 Jan 2004; Martin Holzer <mholzer@gentoo.org> twiki-20030201.ebuild,
  files/twiki.conf:
  running outside of apache

*twiki-20030201 (30 Dec 2003)

  30 Dec 2003; Martin Holzer <mholzer@gentoo.org> metadata.xml,
  twiki-20030201.ebuild:
  Initial ebuild by myself. Closes 25969
